<resources>
    <string name="app_name">Devilishly Fun Faces</string>
    <string name="Cheeks">Cheeks</string>
    <string name="Crop">Crop</string>
    <string name="Delete">Delete</string>
    <string name="DeleteMessage">Do you want to delete?</string>
    <string name="EarNose">Ear &amp; Nose</string>
    <string name="EditPhoto">Edit Photo</string>
    <string name="EyeGlass">Eye Glass</string>
    <string name="Face">Face</string>
    <string name="Filter">Filter</string>
    <string name="Flower">Flower</string>
    <string name="Frame">Frame</string>
    <string name="Glow">Glow</string>
    <string name="Hair">Hair</string>
    <string name="Hat">Hat</string>
    <string name="Heart_Crown">Heart Crown</string>
    <string name="Horns">Horns</string>
    <string name="Neon_Crown">Neon Crown</string>
    <string name="Neon_Wing">Neon Wing</string>
    <string name="Orhers">Others</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="Rainbow">Rainbow</string>
    <string name="RateNow">Rate Now</string>
    <string name="Transparent">Opacity</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="adele">Adele</string>
    <string name="alignment">Alignment</string>
    <string name="amazon">Amazon</string>
    <string name="april">April</string>
    <string name="arrow">Arrow</string>
    <string name="art">Art</string>
    <string name="art_filter">Art Filter</string>
    <string name="ask_later">Ask Later</string>
    <string name="audrey">Audrey</string>
    <string name="backActivityMessage">All changes will be discarded.</string>
    <string name="beauty">Beauty</string>
    <string name="bgname">bgImg.png</string>
    <string name="bluemess">BlueMess</string>
    <string name="blur">Blur</string>
    <string name="blur_effect">Blur Effect</string>
    <string name="blur_option">Blur option</string>
    <string name="brightness_text">brightness</string>
    <string name="brush_size">Brush Size :</string>
    <string name="cachefolder">.temp</string>
    <string name="camera">Camera</string>
    <string name="cancel">cancel</string>
    <string name="chip_text">Chip text</string>
    <string name="clarendon">Clarendon</string>
    <string name="color">Color</string>
    <string name="color_effect">Color Effect</string>
    <string name="contrast_text">contrast</string>
    <string name="create_new">Create Now</string>
    <string name="crop">Crop Photo</string>
    <string name="crop_image">Crop Photo</string>
    <string name="crop_only">Crop</string>
    <string name="cruz">Cruz</string>
    <string name="custom_blur">Custom Blur</string>
    <string name="directory">/ColorSplashEffect/</string>
    <string name="do_you_want_to_exit_app">Do you want to exit?</string>
    <string name="effect">Effect</string>
    <string name="emoji">Emoji</string>
    <string name="empty_message">Not created yet</string>
    <string name="eraser">Eraser</string>
    <string name="exit">Exit</string>
   <string name="face">Face</string>
    <string name="face_option">Face option</string>
    <string name="filePath">FilePath</string>
    <string name="filter">Filter</string>
    <string name="focal_blur">Focal Blur</string>
    <string name="focal_zoom">Focal Zoom</string>
    <string name="folder">folder.</string>
    <string name="free">Free</string>
    <string name="gallery">Gallery</string>
    <string name="haan">Haan</string>
    <string name="halloween">Halloween</string>
    <string name="hardness">Hardness</string>
    <string name="how_was_your_experience_with_us">If you enjoy this App, please take a</string>
    <string name="image">CropImg</string>
    <string name="image_saved">Image has been saved to</string>
    <string name="later">Later</string>
    <string name="lime">Lime</string>
    <string name="loading">Loading...</string>
    <string name="loading_image">Loading image...</string>
    <string name="mars">Mars</string>
    <string name="message_emoji">Message Emoji</string>
    <string name="metropolis">Metropolis</string>
    <string name="motion">Motion blur</string>
    <string name="my_creation">My Creation</string>
    <string name="never">Not Now</string>
    <string name="never_ask">Never Ask</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="oldman">OldMan</string>
    <string name="opacity">Opacity</string>
    <string name="original_color">Original color</string>
    <string name="overlay">Overlay</string>
    <string name="paint">Paint</string>
    <string name="party">Party</string>
    <string name="pattern">Pattern</string>
    <string name="preview">Preview</string>
    <string name="radial_blur">Radial Blur</string>
    <string name="radius">Radius</string>
    <string name="rate">Rate Now</string>
    <string name="rate_now">Rate Us</string>
    <string name="rate_us">Rate App</string>
    <string name="rate_us_string">Tell others what you like in this app?</string>
    <string name="rate_us_text">moment to rate this app.</string>
    <string name="rb_blur">Blur</string>
    <string name="rb_emboss">Emboss</string>
    <string name="rb_normal">Normal</string>
    <string name="rb_transparent">Transparent</string>
    <string name="redraw">Redraw</string>
    <string name="rise">Rise</string>
    <string name="rotate_flip">Rotate/Flip</string>
    <string name="save_share">Share</string>
    <string name="saved_sessions">Saved Sessions</string>
    <string name="saving_session_data">Saving session data...</string>
    <string name="selectimage">Select Photo</string>
    <string name="size">Size</string>
    <string name="snapChat">SnapChat</string>
    <string name="social">Social</string>
    <string name="splash_name">Devilishly Fun Faces \nMakeup Editor</string>
    <string name="starlit">Starlit</string>
    <string name="start_new_session">Start new Session</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sticker">Sticker</string>
    <string name="struck">Struck</string>
    <string name="style">Style</string>
    <string name="summer">Summer</string>
    <string name="temp_folder">tempImages</string>
    <string name="text">Text</string>
    <string name="text_message">Text Message</string>
    <string name="text_option">Text option</string>
    <string name="threeD">3D</string>
    <string name="title_text">Neon Face Editor</string>
    <string name="tools">Tools</string>
    <string name="value">value</string>
    <string name="warmth_text">warmth</string>
    <string name="whisper">Whisper</string>
    <string name="yes">YES</string>
    <string name="zoom">Zoom :</string>

</resources>
