<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/rate_us_background"
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">

                <TextView
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rate_us"
                    android:textAlignment="center" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/rate_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/how_was_your_experience_with_us"
                    android:singleLine="false"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" />

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/rate_us_text"
                    android:singleLine="false"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:src="@drawable/rate_us_stars" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:weightSum="3">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5">

                        <TextView
                            android:textSize="17sp"
                            android:textColor="#bbbbbd"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/never"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/never"
                            android:fontFamily="@font/poppinsregular"
                            style="@style/SelectableItemBackgroundround" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5">

                        <TextView
                            android:textSize="17sp"
                            android:textColor="@color/app_color"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/rate_now"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate_now"
                            android:backgroundTint="@color/colorPrimary"
                            style="@style/SelectableItemBackgroundround" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/ll_later"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/remindme"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/later"
                        android:layout_weight="3" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="top|center_horizontal"
            android:layout_gravity="top|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/rate_us_image" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
