<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:id="@+id/ll_color_effect_layout"
    android:background="@color/bottom_back"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_erase_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:theme="@style/MyRadioButton"
                        android:textColor="@drawable/press_unpress_icon"
                        android:id="@+id/radio_normal"
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/brush_size_radio_button_margin_right"
                        android:checked="true"
                        android:text="@string/rb_normal"
                        android:fontFamily="@font/poppinsregular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:theme="@style/MyRadioButton"
                        android:textColor="@drawable/press_unpress_icon"
                        android:id="@+id/radio_transparent"
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_transparent"
                        android:fontFamily="@font/poppinsregular" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:theme="@style/MyRadioButton"
                        android:textColor="@drawable/press_unpress_icon"
                        android:id="@+id/radio_blur"
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_blur"
                        android:fontFamily="@font/poppinsregular" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:weightSum="2">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:theme="@style/MyRadioButton"
                        android:textColor="@drawable/press_unpress_icon"
                        android:id="@+id/radio_emboss"
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/brush_size_radio_button_margin_right"
                        android:text="@string/rb_emboss"
                        android:fontFamily="@font/poppinsregular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zoom        "
                android:fontFamily="@font/poppinsregular" />

            <SeekBar
                android:id="@+id/zoom_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/point" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brush_size" />

            <SeekBar
                android:id="@+id/brush_size_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/point" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/splash_footer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="4"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/paint_button"
                android:background="?attr/selectableItemBackground"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="myClickHandler">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/img_original"
                    android:visibility="visible"
                    android:src="@drawable/eraser"
                    style="@style/button_footer" />

                <TextView
                    android:textSize="14sp"
                    android:textColor="@drawable/press_unpress_icon"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/t_original_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/eraser" />

                <TextView
                    android:id="@+id/r_original_color"
                    android:background="@drawable/round_background"
                    android:visibility="gone"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/app_color" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/erase_button"
                android:background="?attr/selectableItemBackground"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="myClickHandler">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/img_erase"
                    android:visibility="visible"
                    android:src="@drawable/paint_deactive"
                    style="@style/button_footer" />

                <TextView
                    android:textSize="14sp"
                    android:textColor="@drawable/press_unpress_icon"
                    android:id="@+id/t_filter_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redraw" />

                <TextView
                    android:id="@+id/r_erase_color"
                    android:background="@drawable/round_background"
                    android:visibility="gone"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/app_color" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/button_color_paint"
                android:background="?attr/selectableItemBackground"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="myClickHandler">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/img_brush"
                    android:visibility="visible"
                    android:src="@drawable/brush_color"
                    style="@style/button_footer" />

                <TextView
                    android:textSize="14sp"
                    android:textColor="@drawable/press_unpress_icon"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/t_color_paint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/paint" />

                <TextView
                    android:id="@+id/r_brush"
                    android:background="@drawable/round_background"
                    android:visibility="gone"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/app_color" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/button_color_pallete"
                android:background="?attr/selectableItemBackground"
                android:visibility="visible"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:onClick="myClickHandler">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/img_color_pallete"
                    android:visibility="visible"
                    android:src="@drawable/paint_bucket"
                    android:tint="@drawable/press_unpress_icon"
                    style="@style/button_footer" />

                <TextView
                    android:textSize="14sp"
                    android:textColor="@drawable/press_unpress_icon"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/t_color_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/color" />

                <TextView
                    android:id="@+id/r_color_pallete"
                    android:background="@drawable/round_background"
                    android:visibility="gone"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/app_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
