<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/ll_blur_layout"
    android:background="@color/bottom_back"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:id="@+id/focul_zoom"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@drawable/press_unpress_icon"
                android:gravity="center"
                android:id="@+id/tv_focul_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focal_zoom" />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_focul_zoom"
                android:visibility="visible"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/select_view"
                app:tint="@drawable/press_unpress_sticker" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:id="@+id/motionblur_button"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@drawable/press_unpress_icon"
                android:gravity="center"
                android:id="@+id/tv_motionblur_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motion" />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_motionblur_button"
                android:visibility="visible"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/select_view"
                app:tint="@drawable/press_unpress_sticker" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:id="@+id/erase_btn"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="14sp"
                android:textColor="@drawable/press_unpress_icon"
                android:gravity="center"
                android:id="@+id/tv_eraser_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eraser" />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_eraser_function"
                android:visibility="visible"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/select_view"
                app:tint="@drawable/press_unpress_sticker" />
        </LinearLayout>
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar_motionblur"
        android:padding="10dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="8"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/point" />

    <SeekBar
        android:id="@+id/blur_progress"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/point" />

    <SeekBar
        android:id="@+id/erase_size_blur_seekbar"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/point" />
</LinearLayout>
